Fix Draggable Margin Issue
- Fix Draggable margin issue that produced extra margins, by only
setting bottom margin instead of top and bottom
- Add 'isDragging' styles to Draggables
- Fix onDragEnd error when dragging Draggable outside Droppable
- Change position of NavMenu to fixed to avoid scrolling problem when
main page content is taller than viewport
- Change position of MenuToggle to fixed for the same reason, and adjust
padding and background-color for better aesthetic when main content is
scrolling

--- a/src/components/UI/MenuToggle/MenuToggle.module.css
+++ b/src/components/UI/MenuToggle/MenuToggle.module.css
@@ -1,13 +1,18 @@
 .MenuToggle {
-    background-image: url(../../../assets/images/menu-toggle-button.svg);
-    cursor: pointer;
-    height: 12px;
-    margin: 30px;
-    position: absolute;
-    width: 30px;
+    background-color: rgba(238, 238, 238, 0.95);
+    padding: 30px 0 30px 30px;
+    position: fixed;
+    width: 100vh;
     z-index: 5;
 }
 
-.MenuToggle:active, .MenuToggle:focus, .MenuToggle:hover {
+.ToggleButton {
+    background-image: url(../../../assets/images/menu-toggle-button.svg);
+    cursor: pointer;
+    height: 12px;
+    width: 30px;
+}
+
+.ToggleButton:active, .ToggleButton:focus, .ToggleButton:hover {
     background-image: url(../../../assets/images/menu-toggle-button-active.svg);
 }
