--- a/src/containers/Find/Criteria/Criteria.module.css
+++ b/src/containers/Find/Criteria/Criteria.module.css
@@ -1,10 +1,13 @@
-.Droppable {
+.Text {
+    font-family: 'IBMPlexSans-Regular';
+    font-size: 14px;
+    margin: 0 0 30px 0;
 }
 
 .Draggable {
     background-color: #dadada;
     height: 45px;
     line-height: 45px;
-    margin: 15px 0;
+    margin: 0 0 15px 0;
     text-align: center;
 }
