--- a/src/containers/NavMenu/NavMenu.module.css
+++ b/src/containers/NavMenu/NavMenu.module.css
@@ -4,8 +4,9 @@
     color: #eee;
     height: 100vh;
     padding: 30px;
-    position: absolute;
+    position: fixed;
     transition: transform 0.3s ease-out;
+    top: 0;
     width: 100vw;
     z-index: 10;
 }
